Add some descriptions to the README and polish a bit the notebook.

--- a/Experiments.ipynb
+++ b/Experiments.ipynb
@@ -21,7 +21,7 @@
     "\n",
     " The data folder contains the data such that there are: `./data/DodgerLoopDay/DodgerLoopDay_TEST.tsv` and `./data/DodgerLoopDay/DodgerLoopDay_TRAIN.tsv`\n",
     "\n",
-    "\n",
+    "The initialization on Colab handle the data importation.\n",
     "\n"
    ]
   },
@@ -138,11 +138,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "YVnAIJkJFMi-"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -185,13 +194,16 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": "true",
     "id": "3rfHowbJFMi_",
     "tags": []
    },
    "source": [
     "# Univariate time series - BasicMotions\n",
     "\n",
-    "This section aims at studying the article in the context of univariate time series. As an exploratory example, we used the dataset **DodgerLoopDay **:\n",
+    "This section aims at studying the article in the context of univariate time series. \n",
+    "\n",
+    "As an exploratory example, we used the dataset **DodgerLoopDay **:\n",
     "    \n",
     "        \"The traffic data are collected with the loop sensor installed on ramp for the 101 North freeway in Los Angeles. This location is close to Dodgers Stadium; therefore the traffic is affected by volume of visitors to the stadium. Missing values are represented with NaN. The classes are days of the week. - Class 1: Sunday - Class 2: Monday - Class 3: Tuesday - Class 4: Wednesday - Class 5: Thursday - Class 6: Friday - Class 7: Saturday.\"\n",
     "\n",
@@ -204,6 +216,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": "true",
     "id": "0frr5ReXFMjA",
     "tags": []
    },
@@ -355,6 +368,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": "true",
     "id": "zyBLtHS8DAb2",
     "tags": []
    },
@@ -489,7 +503,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": "true",
+    "tags": []
+   },
    "source": [
     "## Transferability test"
    ]
@@ -800,6 +817,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": "true",
     "id": "B2tQ-d3lFMjE",
     "tags": []
    },
@@ -811,14 +829,15 @@
     "    The data was generated as part of a student project where four students performed four activities whilst wearing a smart watch. The watch collects 3D accelerometer and a 3D gyroscope It consists of four classes, which are walking, resting, running and badminton. Participants were required to record motion a total of five times, and the data is sampled once every tenth of a second, for a ten second period.\n",
     "\n",
     "This section contains:\n",
-    "* A visualization of the dataset\n",
     "* Some experiments on the model provided by the author, on this multivariate dataset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "L_lgOKBlDAb3"
+    "heading_collapsed": "true",
+    "id": "L_lgOKBlDAb3",
+    "tags": []
    },
    "source": [
     "## Training on a single model"
@@ -1003,6 +1022,7 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "heading_collapsed": "true",
     "id": "MUrE0rm8JNnr",
     "outputId": "f206abf2-b080-4fd1-c2a6-4e1e5053b0b4",
     "tags": []
@@ -1134,7 +1154,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "cNGPN1dwDAb5"
+    "heading_collapsed": "true",
+    "id": "cNGPN1dwDAb5",
+    "tags": []
    },
    "source": [
     "#  Run algorithms on all the dataset"
@@ -1405,6 +1427,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": "true",
     "hidden": true,
     "id": "Paj-nBnwFMjK",
     "tags": []
@@ -1412,7 +1435,7 @@
    "source": [
     "# Causal CNN Encoder - Exploration\n",
     "\n",
-    "This section runs different experiment to investigate the role of the different module of the architecture:\n",
+    "This section investigate the role of the different module of the architecture:\n",
     "\n",
     "* The global average pooling layer to squeeze the temporal dimension, which is supposed to regularize the model compared to using a fully-connected layer.\n",
     "* The different hyper-parameters of the model:\n",
@@ -1443,13 +1466,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "hidden": true,
     "id": "cUOykLyXFMjL"
    },
    "outputs": [],
    "source": [
+    "from pyts.datasets import load_basic_motions, uea_dataset_list, fetch_uea_dataset\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = fetch_uea_dataset(\n",
+    "    \"BasicMotions\", use_cache=False, data_home=\"./data/Multivariate/\", return_X_y=True\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Preprocessing: normalization\n",
+    "X_train = (X_train - X_train.mean(axis=2)[:, :, None]) / X_train.std(axis=2)[:, :, None]\n",
+    "X_test = (X_test - X_test.mean(axis=2)[:, :, None]) / X_test.std(axis=2)[:, :, None]\n",
+    "\n",
+    "\n",
+    "X_train = torch.from_numpy(X_train).double()\n",
+    "X_test = torch.from_numpy(X_test).double()\n",
+    "if torch.cuda.is_available():\n",
+    "    X_train = X_train.cuda()\n",
+    "    X_test = X_test.cuda()\n",
+    "\n",
+    "    \n",
     "in_channels = 6\n",
     "channels = 40\n",
     "depth = 4\n",
@@ -1516,12 +1558,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "hidden": true,
     "id": "-pqZRPewFMjN"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Shape:\n",
+      "[40, 6, 100] \n",
+      "\n",
+      "ConvBlock_1:\n",
+      "[40, 40, 100] \n",
+      "\n",
+      "ConvBlock_2:\n",
+      "[40, 40, 100] \n",
+      "\n",
+      "ConvBlock_3:\n",
+      "[40, 40, 100] \n",
+      "\n",
+      "ConvBlock_4:\n",
+      "[40, 160, 100] \n",
+      "\n",
+      "Global Average Pooling:\n",
+      "[40, 160, 1] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "model_from_scratch = [\n",
     "    ConvBlock_1,\n",
@@ -1549,8 +1616,7 @@
     "    print(\"{}:\".format(model_name_from_scratch[block_ii]))\n",
     "    output = model_from_scratch[block_ii](input)\n",
     "    print(list(output.shape), \"\\n\")\n",
-    "    input = output\n",
-    "input[0]"
+    "    input = output\n"
    ]
   },
   {
@@ -1565,12 +1631,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "hidden": true,
     "id": "OJTPysnMFMjQ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Shape:\n",
+      "[40, 6, 100] \n",
+      "\n",
+      "ConvBlock_1:\n",
+      "[40, 40, 100] \n",
+      "\n",
+      "ConvBlock_2:\n",
+      "[40, 40, 100] \n",
+      "\n",
+      "ConvBlock_3:\n",
+      "[40, 40, 100] \n",
+      "\n",
+      "ConvBlock_4:\n",
+      "[40, 160, 100] \n",
+      "\n",
+      "Mean_to_squeeze:\n",
+      "[40, 160, 1] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Instead of the Global Average Pooling\n",
     "linear_to_squeeze = torch.nn.Linear(N_sample, 1).double()\n",
@@ -1602,45 +1693,13 @@
     "    print(\"{}:\".format(model_name_from_scratch_experiment[block_ii]))\n",
     "    output = model_from_scratch_experiment[block_ii](input)\n",
     "    print(list(output.shape), \"\\n\")\n",
-    "    input = output\n",
-    "input[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true,
-    "id": "kd_AxvxrFMjQ"
-   },
-   "source": [
-    "**Comparison of the performances**\n",
-    "\n",
-    "TODO"
+    "    input = output"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true,
-    "id": "cZef8cyvFMjR"
-   },
-   "source": [
-    "### Analysis of the hyperparameters of the model\n",
-    "\n",
-    "TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
+    "heading_collapsed": "true",
     "id": "ltKWDCD6DAb7",
     "tags": []
    },
@@ -1651,6 +1710,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": "true",
     "id": "SYB17odsDAb8",
     "tags": []
    },
@@ -1751,7 +1811,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "HBCfw-gyDAb8"
+    "heading_collapsed": "true",
+    "id": "HBCfw-gyDAb8",
+    "tags": []
    },
    "source": [
     "## Multivariate\n",
@@ -2004,7 +2066,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
